--- a/环境搭建/nginx/main.conf
+++ b/环境搭建/nginx/main.conf
@@ -10,9 +10,9 @@ events {
     worker_connections 1024;
 }
 http {
-    log_format  main  '$http_x_forwarded_for - "$request_time"s [$time_local] "$request" '
+    log_format  main  '$http_x_forwarded_for -  "$remote_addr" "$request_time"s "$request" '
                       '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$remote_addr"';
+                      '"$http_user_agent"';
 
     access_log  /var/log/nginx/access.log  main;
     sendfile            on;
@@ -46,11 +46,21 @@ http {
     ######################################################################
     ##increase the buffer for sending requests to sourceforge
     ##added by general, on 2015-11-11
-    ##proxy_buffers 4 64k;
-    ##proxy_buffer_size 64;
-    ##proxy_busy_buffers_size 128k;
-    ##proxy_temp_file_write_size 128k;
+    ## proxy_set_header Host $host;
+    ## proxy_set_header X-Real-IP $remote_addr;
+    ## proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    ## proxy_connect_timeout 30;
+    ## proxy_send_timeout 30;
+    ## proxy_read_timeout 60;
+    ## proxy_buffers 4 64k;
+    ## proxy_buffer_size 64;
+    ## proxy_busy_buffers_size 128k;
+    ## proxy_temp_file_write_size 128k;
     ######################################################################
+ 
+
+    ## 响应头中不显示nginx版本号
+    server_tokens off;
 
     ######################################################################
     ## 开启压缩 gzip
@@ -62,9 +72,19 @@ http {
     gzip_http_version 1.1;
     ## 压缩级别, 1最快, 9最慢
     gzip_comp_level 3;
-    gzip_types text/plain text/css application/x-javascript application/xml
+    ## application/x-javascript不起作用 
+    ## image/jpeg image/gif image/png图片不用压缩, 只需要缓存即可;
+    gzip_types text/plain application/javascript text/javascript text/css application/xml application/x-httpd-php;
     gzip_vary on;
+    gzip_disable "MSIE [1-6]\.";
     ######################################################################
+
+
+    ## 客户端缓存
+    location ~ \.(gif|jpg|jpeg|png|bmp|ico|js|css|html)$ {
+        root /var/www/img/;
+        expires 30d;
+    }
 
     include vhosts/*.conf;
 }
