火树docker文档更新

--- a/deploy/docker/dockerfile(work)/火树/nginx.conf.d/hdc.conf
+++ b/deploy/docker/dockerfile(work)/火树/nginx.conf.d/hdc.conf
@@ -13,6 +13,9 @@ server{
 	location /etlloader {
 		proxy_pass http://backend_etlloader;
 	}
+	location /drgs {
+		proxy_pass http://backend_drgs;
+	}
 	#hdc-manager
 	location /se {
 		proxy_pass http://backend_se;
@@ -21,6 +24,10 @@ server{
 
 upstream backend_etlloader {
 	server 172.21.1.4:8080;
+}
+
+upstream backend_drgs {
+	server 172.21.1.4:9998;
 }
 
 upstream backend_se {
